syntax = "proto3";
package common.agent;
import "common/base.proto";

option java_multiple_files = true;
option java_package = "com.fingo.littlec.proto.common.agent";
option java_outer_classname = "Agent";

message AppProxyRequest {
    string service_name = 1;
    string interface_name = 2;
    bytes data = 3;
    string version = 4;
}

message AppProxyResponse{
    common.base.ErrorMessage ret = 1;
    bytes res = 2;
}

message BackProxyRequest {
    string service_name = 1;
    string interface_name = 2;
    bytes data = 3;
    string version = 4;
}

message BackProxyResponse{
    common.base.ErrorMessage ret = 1;
    bytes res = 2;
}

message AdminProxyRequest {
    string service_name = 1;
    string interface_name = 2;
    bytes data = 3;
    string version = 4;
}

message AdminProxyResponse{
    common.base.ErrorMessage ret = 1;
    bytes res = 2;
}


